[package]
name = "bases"
version = "0.2.6"
edition = "2018"
license = "CC0-1.0"
description = "Implementation of jan Misali's number base algorithm"
homepage = "https://github.com/printfn/bases"
repository = "https://github.com/printfn/bases"
documentation = "https://docs.rs/bases"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "bases"
